s3fuse (0.15) unstable; urgency=low

  * Removed known-issue notes on MIME mapping and Google Cloud Storage
    Manager folder representation incompatibility.
  * Removed libxml++ dependency.

 -- Tarick Bedeir <tarick@bedeir.com>  Web, 07 Aug 2013 15:44:59 -0400

s3fuse (0.14) unstable; urgency=low

  * NEW: Multipart (resumable) uploads for Google Cloud Storage.
  * NEW: Support for FV/S.
  * NEW: Set file content type by examining extension.
  * NEW: Set Cache-Control header with extended attribute.
  * NEW: Allow creation of "special" files (FIFOs, devices, etc.).
  * Allow verbosity to be specified explicitly on the command line.
  * Fix multipart download bug that prevented some transfers from resuming.
  * Use real user ID/group ID rather than effective IDs.
  * Only use user ID/group ID/mode in object metadata if values are valid.
  * Set and retrieve object creation time (on newly-created objects).
  * Fix inconsistent state bug when reopening file immediately after closing.
  * Various POSIX compliance fixes.

 -- Tarick Bedeir <tarick@bedeir.com>  Sat, 06 Apr 2013 14:57:10 -0600

s3fuse (0.13.1) unstable; urgency=low

  * OS X: Fixed bug that resulted in command-line arguments being ignored.

 -- Tarick Bedeir <tarick@bedeir.com>  Fri, 15 Feb 2013 20:06:26 -0600

s3fuse (0.13) unstable; urgency=low

  * NEW: File encryption. See README.
  * NEW: Glacier restore requests. See README.
  * NEW: Add least-recently-used eviction to object cache, controlled by the
    max_objects_in_cache configuration option.
  * NEW: OS X binaries.
  * IMPORTANT: Removed "auth_data" configuration option. For AWS, use
    "aws_secret_file" instead. For Google Storage, use "gs_token_file".
  * IMPORTANT: Search for configuration file in ~/.s3fuse/s3fuse.conf before
    trying %sysconfdir/s3fuse.conf (this is usually /etc/s3fuse.conf or
    /usr/local/s3fuse.conf).
  * Switched to SHA256 for file integrity check. File hash, if available, will 